tests/fixtures/valid/crazy/builtins/enumerate.py
# Valid enumerate() calls
# Auto-generated by scripts/generate_tests.py

b0_enumerate_str = enumerate("hello")
b1_enumerate_bytes = enumerate(b"hello")
b2_enumerate_list = enumerate([1, 2, 3])
b3_enumerate_dict = enumerate({"a": 1})
b4_enumerate_set = enumerate({1, 2, 3})

print("enumerate() tests passed!")
