tests/fixtures/invalid/pow_str_float_set.py
# Cannot call pow() with Str, Float, Set[int]
x = pow("hello", 1.0, {1, 2, 3})
